--- a/GeoAnswer/app/src/main/res/layout/fragment_ask_question.xml
+++ b/GeoAnswer/app/src/main/res/layout/fragment_ask_question.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hackillinois.geoanswer.geoanswer.AnswerQuestionFragment">
+    tools:context="com.hackillinois.geoanswer.geoanswer.AnswerQuestionFragment"
+    android:background="#FFFFFF">
 
     <LinearLayout
         android:orientation="vertical"
@@ -13,7 +14,7 @@
             android:layout_width="124dp"
             android:layout_height="140dp"
             android:id="@+id/imageView"
-            android:src="@drawable/food"
+            android:src="@drawable/logo"
             android:layout_gravity="center_horizontal" />
 
         <TextView
@@ -21,7 +22,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Large Text"
-            android:id="@+id/questionDisplay" />
+            android:id="@+id/locationDisplay" />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -32,9 +33,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Ask"
-                android:id="@+id/answerButton"
+                android:id="@+id/askButton"
                 android:textAllCaps="false"
-                android:layout_gravity="right" />
+                android:layout_gravity="right"
+                android:background="#c3dce1" />
 
             <EditText
                 android:layout_width="wrap_content"
@@ -42,19 +44,11 @@
                 android:layout_weight="1"
                 android:inputType="textCapSentences|textMultiLine"
                 android:ems="10"
-                android:id="@+id/answerBox"
+                android:id="@+id/askBox"
                 android:hint="@string/ask_prompt"
                 />
         </LinearLayout>
 
-        <Button
-            android:layout_width="29dp"
-            android:layout_height="30dp"
-            android:text="&lt;-"
-            android:id="@+id/button"
-            android:textAllCaps="false"
-            android:singleLine="true"
-            android:layout_marginTop="-20dp" />
     </LinearLayout>
 
 </FrameLayout>
