--- a/GeoAnswer/app/src/main/res/layout/activity_question_view.xml
+++ b/GeoAnswer/app/src/main/res/layout/activity_question_view.xml
@@ -13,7 +13,7 @@
 
 
 
-    <!--TODO-->
+    <!--Display various frags-->
     <FrameLayout
         android:id="@+id/main_fragment_container"
         android:layout_width="match_parent"
