--- a/GeoAnswer/app/src/main/res/layout/fragment_ask_question.xml
+++ b/GeoAnswer/app/src/main/res/layout/fragment_ask_question.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.hackillinois.geoanswer.geoanswer.AnswerQuestionFragment"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    android:id="@+id/main_fragment_container">
 
     <LinearLayout
         android:orientation="vertical"
@@ -15,7 +16,8 @@
             android:layout_height="140dp"
             android:id="@+id/imageView"
             android:src="@drawable/logo"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:contextClickable="false" />
 
         <TextView
             android:layout_width="wrap_content"
