--- a/GeoAnswer/app/src/main/res/layout/fragment_location_feed.xml
+++ b/GeoAnswer/app/src/main/res/layout/fragment_location_feed.xml
@@ -4,14 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="8dp"
-    android:paddingRight="8dp">
+    android:paddingRight="8dp"
+    android:touchscreenBlocksFocus="false">
 
 
         <ImageView
             android:layout_width="124dp"
             android:layout_height="140dp"
             android:id="@+id/imageView"
-            android:src="@drawable/food"
+            android:src="@drawable/logo"
             android:layout_gravity="center_horizontal" />
 
         <TextView
